fix flushcrange, how did that ever work??  now boots with cleared PRAM.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 TODO / Known bugs
 
-    almost certainly won't work in 24 bit mode as fpsp/isp are after the 1MB ROM mapping boundary (80000 - 8FFFFF) probably just have to accept that
     System 7.5 hangs in boot at welcome to macintosh, probably FPU-related.
 
     branch cache probably not working
@@ -14,9 +13,16 @@ TODO / Known bugs
             hands over to system handlers for some of the traps not used for 040 but 060 fpsp would use those
         seems to cause crashes if FPU code is called.
         TESTFORFPU happens very early in boot
-        
+
     bus error handling (in general)
         Need to correctly handled the new exception stack frame in slot manager  PATCH_SLOTMGR_BERR_HACK
 
     SPs
         need to hand off to appropriate vectors off VBR for stuff like /v, chk, etc
+
+
+### DONE??
+
+    almost certainly won't work in 24 bit mode as fpsp/isp are after the 1MB ROM mapping boundary (80000 - 8FFFFF) 
+        probably just have to accept that
+        patch to force 32 bit added
